--- a/App1/App1/App1.Android/Properties/AndroidManifest.xml
+++ b/App1/App1/App1.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.App1" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="25" />
-	<application android:label="App1.Android"></application>
+  <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="24" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <application android:label="App1">
+    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyDCYbHSncfwZHfxc2l-fVhbENzzCSPzvq4" />
+    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+    
+  </application>
 </manifest>
