--- a/App1/App1/App1/App1.csproj
+++ b/App1/App1/App1/App1.csproj
@@ -7,7 +7,8 @@
   <ItemGroup>
     <PackageReference Include="ExifLib.PCL" Version="1.0.1" />
     <PackageReference Include="Xam.Plugin.Media" Version="3.1.3" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+    <PackageReference Include="Xamarin.Forms" Version="2.5.1.444934" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="2.5.1.444934" />
   </ItemGroup>
 
   <ItemGroup>
